fixed table DetailPengiriman
