# app/Models/Models/DetailPengiriman.php
@@ -1,0 +1,10 @@
+<?php
+
+namespace App\Models\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class DetailPengiriman extends Model
+{
+    //
+}
