# routes/api.php
@@ -6,6 +6,8 @@ use App\Http\Controllers\API\GudangController;
 use App\Http\Controllers\API\JenisSenjataController;
 use App\Http\Controllers\API\SenjataController;
 use App\Http\Controllers\Api\KaryawanGudangController;
+use App\Http\Controllers\API\DetailPengirimanController;
+
 
 
 
@@ -15,6 +17,8 @@ Route::apiResource('jenissenjata', JenisSenjataController::class);
 Route::apiResource('senjata', SenjataController::class);
 Route::apiResource('karyawangudang', KaryawanGudangController::class);
 Route::apiResource('institusi', InstitusiController::class);
+Route::apiResource('/detail-pengiriman', DetailPengirimanController::class);
+Route::apiResource('/detail-pengiriman', DetailPengirimanController::class);
 
 // Route::group([], function () {
 //     Route::get('gudang', [GudangController::class, 'listCategory']);
